[package]
name = "cpos"
version = "0.1.0"
authors = ["Andrea <andrea.fasola@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "stack_overflow"
harness = false